--- a/index.html
+++ b/index.html
@@ -113,5 +113,13 @@
         </div>
       </div>
     </div>
+    <small>
+          <a
+            href="https://github.com/Chnacie/Vanilla-Weather/tree/main"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Chancie
+        </small>
   </body>
 </html>
