--- a/about.html
+++ b/about.html
@@ -77,5 +77,14 @@
         chancie@gmail.com
       </a>
     </div>
+    </br>
+   <small>
+          <a
+            href="https://github.com/Chnacie/chancieportfolio"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Chancie
+        </small>
   </body>
 </html>
