--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </a>
         </div>
         <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
+          ✌️ This website was coded by chancie saintamour, and is
           <a
             href="https://github.com/Chnacie/chancieportfolio"
             target="_blank"
