--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/portfolio.css" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -34,14 +34,14 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="logo.png"
+            src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="chancie Logo"
+            alt="Patricia Logo"
           />
           <img
-            src="logo-small.jpg"
+            src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Chancie Logo"
+            alt="Patricia Logo"
           />
         </a>
         <ul>
@@ -49,10 +49,10 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Chancie"> About</a>
+            <a href="/about.html" title="About chancie"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's Chancie"> Work</a>
+            <a href="/work.html" title="saintamour work"> Work</a>
           </li>
           <li>
             <a href="/contact.html" title="Contact Chancie"> Contact</a>
@@ -64,8 +64,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I’m Patricia Chancie</h1>
-            <h2 class="mb-4">Front-end developer based in Portugal </h2>
+            <h1 class="mb-4">Hi, I’m Chancie Saintamour</h1>
+            <h2 class="mb-4">Front-end developer based in United State</h2>
             <p class="mb-5">
               I’m currently seeking new opportunities in front-end development. I’m open to work remotely and have flexible hours. I’m highly skilled in JavaScript and React.
             </p>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/chancie.png" alt="" class="img-fluid" />
+          <img src=""IMG_6132.JPG" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -97,14 +97,14 @@
         <a
           href="mailto:chancie@gmail.com"
           class="email-link"
-          title="Emailchancie"
+          title="Email chancie
         >
           chancie@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/chnacie"
+          href="https://www.github.com/chancie"
           target="_blank"
           title="GitHub Profile"
         >
@@ -118,7 +118,7 @@
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/_chancie"
+          href="https://www.twitter.com/chancie"
           target="_blank"
           title="Twitter Profile"
         >
@@ -128,11 +128,11 @@
       <p class="text-center mt-5">
         ✌️ This website was coded by Chancie Saintamour, and is
         <a
-          href="https://github.com/Chnacie"
-          target="_blank"
-        >
-          open-sourced
-        </a>
+        href="https://github.com/Chnacie/chancieportfolio"
+        target="_blank"
+      >
+        open-sourced
+      </a>
       </p>
     </footer>
   </body>
