--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patricia is a front-end engineer based in Portugal."
+      content="Chancie Saintamour a front-end engineer based in United State."
     />
     <title>Front-end developer - Chancie Saintamour</title>
 
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="pstyle.css" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -40,12 +40,12 @@
           <img
             src="logo.png"
             class="logo d-none d-md-block"
-            alt="Chancie Logo"
+            alt="chancie Logo"
           />
           <img
             src="logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Chancie Logo"
+            alt="chancie Logo"
           />
         </a>
         <ul>
@@ -67,7 +67,7 @@
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Chancie Saintamour</h1>
-      <h2 class="mb-5">Front-end developer based in United State</h2>
+      <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
@@ -149,7 +149,7 @@
             <a
               href="/contact.html"
               class="btn btn-branding mt-3"
-              title="Contact Chancie"
+              title="Contact Patricia"
             >
               Contact me
             </a>
@@ -159,14 +159,14 @@
           <a
             href="mailto:chancie@gmail.com"
             class="email-link"
-            title="Email Chancie"
+            title="Email chancie"
           >
             chancie@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
           <a
-            href="https://www.github.com/chancie"
+            href="https://www.github.com/chnacie"
             target="_blank"
             title="GitHub Profile"
           >
@@ -188,7 +188,7 @@
           </a>
         </div>
         <p class="text-center mt-5">
-          ✌️ This website was coded by chancie saintamour, and is
+          ✌️ This website was coded by Chancie Saintamour, and is
           <a
             href="https://github.com/Chnacie/chancieportfolio"
             target="_blank"
