--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Chancie Saintamour</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h2 class="mb-5">Front-end developer based in United Sate</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
