--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="images/dictionary.png"
+            src="dictionary.png"
             class="img-fluid"
             alt="Dictionary app preview"
           />
