--- a/about.html
+++ b/about.html
@@ -36,12 +36,12 @@
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="chancie Logo"
           />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Chancie Logo"
           />
         </a>
         <ul>
